# async-pipe-rs

./: .gitignore  Cargo.toml  README.md  async-pipe-rs.ipr  async-pipe-rs.iws
.github/workflows/: test.yml
examples/: main.rs
src/: lib.rs  reader.rs  state.rs  writer.rs
