[package]
name = "async-pipe"
version = "0.1.3"
description = "Creates an asynchronous piped reader and writer pair using tokio.rs"
homepage = "https://github.com/routerify/async-pipe-rs"
repository = "https://github.com/routerify/async-pipe-rs"
keywords = ["pipe", "future", "async", "reader", "writer"]
categories = ["asynchronous"]
authors = ["Rousan Ali <rousanali786@gmail.com>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[features]
default = ["futures"]

[dependencies]
tokio = { version = "1", features= [], optional = true }
log = "0.4"
futures = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[package.metadata.docs.rs]
features = ["futures", "tokio"]

[[example]]
name = "tokio"
required-features = ["tokio"]
